# fhe_processor

./: Cargo.toml  readme.md
after_process/: compare.dot  graph.dot  input.csv  plot_by_threads.py  process.py  result.csv
benches/: all_op_bench.rs  large_op_bench.rs  lut_bench.rs  manager_bench.rs  program_bench.rs
related_work/: concrete_test.py
related_work/.artifacts/: bubble5.txt  bubble5_packed.1.initial.graph.txt  bubble5_packed.2.final.graph.txt  bubble5_packed.parameters.txt  bubble5_packed.txt  environment.txt  mlir.txt  requirements.txt  traceback.txt
src/: lib.rs
src/operations/: cipher_lut.rs  lut.rs  lut_manager.rs  manager.rs  mask_chunk.rs  mod.rs  operand.rs  operation.rs  plain_lut.rs
src/opmized_operations/: Compare.rs  mod.rs  sign.rs
src/processors/: cbs_4_bits.rs  convert.rs  key_gen.rs  low_noise_ms.rs  lwe_stored_ksk.rs  lwe_storede_ks.rs  mod.rs  pbs.rs  rev_trace.rs
src/programs/: average.rs  bubble.rs  maximum.rs  mod.rs  squaresum.rs
src/utils/: instance.rs  mod.rs  parms.rs  tools.rs
